--- a/exercise-3/README
+++ b/exercise-3/README
@@ -1,4 +1,4 @@
-ex :
 
-Write a script that accept only one argument as a number and check:
-if it odd add 3 to the number, else add 5.
+# exercise3
+
+- 🌟 script that accept only one argument as a number and check: if it odd add 3 to the number, else add 5.
