--- a/exercise-7/README
+++ b/exercise-7/README
@@ -1,7 +1,4 @@
-ex:
 
-code a bash function which receives a PID.
-the function will check periodically (in a method of your choice - at,
-chron, sleep Etc. ... ) whether the process is up.
-if the proc is down - a new file named "WARNING - pid -number: [PID]
-is DOWN" will be created in the user home dir
+# exercise7
+
+- 🌟 bash function which receives a PID.the function will check periodically (in a method - at, chron, sleep Etc. ... ) whether the process is up. if the proc is down - a new file named "WARNING - pid -number: [PID]is DOWN" will be created in the user home d
